# simple-todos-be

./: .env  Cargo.toml
src/: config.rs  helpers.rs  main.rs  types.rs
src/actions/: todos.rs
src/entities/: todo.rs
src/libs/: db.rs
src/views/: todos.rs
