[package]
name = "simple-todos-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock" ] }
rocket = { version = "=0.5.0-rc.3", features = [ "json"] }
serde_json = "1.0.96"
